styled background, text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Main JS -->
     <script src="./js/script.js"></script>
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
+      rel="stylesheet"
+    />
     <title>Auto Write Text</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">asfds</div>
+  </body>
 </html>
